html as loading placeholder for LexicalReader, many small fixes
- prevent importing an empty editor state
- adjust code nodes theme for dark and light mode
- hide floating elements far away from the viewport
- tweaks to floating elements animations
- fix overflow and overflowing button on Reader and Reader loading placeholder
- accept and use a callback ref for LexicalReader and a normal ref for (markdown) Text

bits:
- split SNLexical in LexicalEditor and LexicalReader
- forward ref to loading placeholder and Reader

--- a/components/lexical/plugins/links/linkeditor/linkeditor.module.css
+++ b/components/lexical/plugins/links/linkeditor/linkeditor.module.css
@@ -3,7 +3,7 @@
   top: 0;
   left: 0;
   z-index: 600;
-  opacity: 0.7;
+  opacity: 0;
   will-change: transform;
   background-color: var(--theme-inputBg);
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
